--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,14 @@
     font-size: 1.5em;
     font-weight: bold;
 }
+
 .gratLines {
     fill: none;
     stroke: #999;
     stroke-width: 1px;
 }
 
-.gratBackground {
+.gratBackground gratBackground{
     fill: #1f3b74;
 }
 
