--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@
     font-weight: bold;
 }
 
+.map {
+    border: medium solid #999;
+}
 
 .gratLines {
     fill: none;
@@ -27,9 +30,26 @@
 }
 
 .gratBackground {
-    fill: #1f3b74;
+    fill: #2e4b85;
 }
 
 .map {
     border: medium solid #999;
+}
+
+.dropdown {
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    z-index: 10;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px solid #999;
+    box-shadow: 2px 2px 4px #999;
+}
+
+option {
+    font-weight: normal;
 }
