--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,22 @@
 /*Add CSS styles here*/
 
 .axis path,
-.axis line {
-    fill: gray;
-    stroke: black;
-    stroke-width: 1px;
-    shape-rendering: crispEdges;
-}
-
-.axis text {
-    font-family: sans-serif;
-    font-size: 0.9em;
-}
-
-.title {
-    font-family: sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-}
 
 .map {
     border: medium solid #999;
+    margin: 10px 0 0 20px;
+}
+
+.usa {
+    fill: #aba6a6;
+    stroke: #605a5a;
+    stroke-width: 2px;
+}
+
+.ca {
+    fill: #d0c4c4;
+    stroke: #605a5a;
+    stroke-width: 2px;
 }
 
 .gratLines {
@@ -30,7 +26,7 @@
 }
 
 .gratBackground {
-    fill: #2e4b85;
+    fill: #8cc1d2;
 }
 
 .map {
@@ -52,4 +48,51 @@
 
 option {
     font-weight: normal;
+}
+
+.regions {
+    stroke: #000;
+    stroke-width: 0.5px;
+    stroke-linecap: round;
+}
+
+.numbers {
+    fill: white;
+    font-family: sans-serif;
+}
+
+.chart {
+    float: right;
+    margin: 7px 20px 0 0;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.chartBackground {
+    fill: rgba(128,128,128,.2);
+}
+
+.chartFrame {
+    fill: none;
+    stroke: #999;
+    stroke-width: 3px;
+    shape-rendering: crispEdges;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 0.8em;
+    fill: #999;
 }
