--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@
 
 .dropdown {
     position: absolute;
-    top: 30px;
-    left: 40px;
+    top: 65px;
+    left: 32px;
     z-index: 10;
     font-family: sans-serif;
     font-size: 1em;
@@ -96,4 +96,11 @@
 
 option {
     font-weight: normal;
+}
+
+
+.box{
+    position: static;
+    top:10px; 
+    left: 500px;
 }
